add db http check access

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 obj/*
 bin/*
+.vs/ProjectEvaluation/matchzy.projects.v7.bin
+.vs/ProjectEvaluation/matchzy.metadata.v7.bin
+.vs/MatchZy/v17/.suo
+.vs/MatchZy/v17/.futdcache.v2
+.vs/MatchZy/FileContentIndex/d826f586-e2fb-40e9-913a-79f31ba1c3d3.vsidx
+.vs/MatchZy/DesignTimeBuild/.dtbcache.v2
+.vs/MatchZy/FileContentIndex/8bdc7173-d0cf-45ae-9392-f3910a2ea1f6.vsidx
+.vs/MatchZy/FileContentIndex/8fe9d9ef-3fbe-4a79-b1b1-d11b291f089f.vsidx
