--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ bin/*
 .vs/MatchZy/FileContentIndex/8bdc7173-d0cf-45ae-9392-f3910a2ea1f6.vsidx
 .vs/MatchZy/FileContentIndex/8fe9d9ef-3fbe-4a79-b1b1-d11b291f089f.vsidx
 .vs/MatchZy/FileContentIndex/3034042f-ec9d-4a54-bb57-47de97e4632c.vsidx
+*.vsidx
