--- a/MatchZy.csproj
+++ b/MatchZy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,18 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Reference Include="CounterStrikeSharp.API">
-       <HintPath>C:\CS2Dev\CounterStrikeSharp\addons\counterstrikesharp\api\CounterStrikeSharp.API.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="30.0.1" />
-    <PackageReference Include="Dapper" Version="2.1.15" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.13" />
-    <PackageReference Include="MySqlConnector" Version="2.3.0" />
-    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.6" />
-  </ItemGroup>
-
+<ItemGroup>
+	<Reference Include="CounterStrikeSharp.API">
+		<HintPath>C:\CS2Dev\CounterStrikeSharp\addons\counterstrikesharp\api\CounterStrikeSharp.API.dll</HintPath>
+	</Reference>
+	<PackageReference Include="CsvHelper" Version="30.0.1" />
+	<PackageReference Include="Dapper" Version="2.1.15" />
+	<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.13" />
+	<PackageReference Include="MySqlConnector" Version="2.3.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.6" />
+</ItemGroup>
 </Project>
