--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ bin/*
 .vs/MatchZy/FileContentIndex/8fe9d9ef-3fbe-4a79-b1b1-d11b291f089f.vsidx
 .vs/MatchZy/FileContentIndex/3034042f-ec9d-4a54-bb57-47de97e4632c.vsidx
 *.vsidx
+.vs/MatchZy/v17/.wsuo
+.vs/MatchZy/v17/.wsuo
