--- a/MatchZy.csproj
+++ b/MatchZy.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
 <ItemGroup>
+	<PackageReference Include="Counterstrikesharp.api" Version="1.0.233" />
 	<Reference Include="CounterStrikeSharp.API">
 		<HintPath>C:\CS2Dev\CounterStrikeSharp\addons\counterstrikesharp\api\CounterStrikeSharp.API.dll</HintPath>
 	</Reference>
